Modifiche grafiche un po' a tutto

--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Measures/Measures.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Measures/Measures.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Measures";
+    ViewData["Title"] = "Misurazioni";
 }
 
 @model KCASM_AppWeb.Models.ForView.Measures
-
-<h2>Measures</h2>
 
 <fieldset style="margin-top: 2em; margin-bottom: 2em;">
     <legend>Seleziona intervallo (Total 20 giorni massimo)</legend>
