--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Medic/Medic.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Medic/Medic.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Medic";
+    ViewData["Title"] = "Medico";
 }
 
 @model KCASM_AppWeb.Models.ForView.Medic
 
-<h2>Medic</h2>
-<div class="container">
+<div style="margin-top: 2em" class="container">
     <div class="row">
         <div style="margin-bottom: 2em;" class="col-md-6">
             <fieldset>
@@ -184,7 +183,7 @@
 </div>
         
          
-<p style="font: 30px sans-serif; margin-top: 1.5em;">Elenco di tutte le pazienti</p>
+<h2>Elenco di tutte le pazienti</h2>
 <div id="medic"></div>
 <script>
     $(document).ready(function () {
