--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Message/Message.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Message/Message.cshtml
@@ -1,13 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Message";
+    ViewData["Title"] = "Messaggi";
 }
 
 @model KCASM_AppWeb.Models.ForView.Message
 
-<h2>Messaggi</h2>
-
-
-<p style="font: 30px sans-serif; margin-top: 1.5em;">Elenco delle chat</p>
+<h2>Elenco delle chat</h2>
 <div id="chatprofile"></div>
 <script>
                   $(document).ready(function () {
