--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
         body, html {
             background-repeat: no-repeat;
-            background-color: rgb(251, 255, 197);
+            background-color: rgb(216, 255, 211);
         }
 
         html {
@@ -80,6 +80,8 @@
             text-align: center;
             color: white;
         }
+        legend {color:black;border-bottom-color: black; text-align: center}
+        h1, h2 {text-align:center}
     </style>
     
 </body>
