--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksPatient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksPatient.cshtml
@@ -1,14 +1,11 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Tasks";
 }
 
 @model KCASM_AppWeb.Models.ForView.Tasks
 
-<h2>Tasks</h2>
+<div style="margin-top: 2em" id="tasks"></div>
 
-
-<div id="tasks"></div>
 <script>
                 $(document).ready(function () {
                     $("#tasks").kendoGrid({
@@ -30,7 +27,7 @@
                             },
                             pageSize: 10
                         },
-                        height: "30em",
+                        height: "50em",
                         groupable: false,
                         sortable: true,
                         pageable: {
