--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Weight/Weight.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Weight/Weight.cshtml
@@ -1,30 +1,32 @@
 ﻿@{
-    ViewData["Title"] = "Weight";
+    ViewData["Title"] = "Pesi";
 }
-
-<h2>Weight</h2>
 
 @model KCASM_AppWeb.Models.ForView.Weights
 
+
+<div style="margin-top: 3em;" class="container">
+    <div id="pesi"></div><br />
+</div>
+
 @if (ViewData["Session"].Equals("Patient"))
 {
-<fieldset style="margin-top: 2em; margin-bottom: 2em;">
-    <legend>Aggiungi il peso odierno</legend>
-    <form id="form_details" method="post" action="/Weight/NewWeight">
-        <div class="form-group">
-            <div class="col-md-3">
-                <label>Nuovo Peso</label>
-                <input type="number" step="0.01" name="weight" placeholder="nuovo peso" required />
+    <fieldset style="margin-top: 2em; margin-bottom: 2em;">
+        <legend>Aggiungi il peso odierno</legend>
+        <form id="form_details" method="post" action="/Weight/NewWeight">
+            <div class="form-group">
+                <div class="col-md-3">
+                    <label>Nuovo Peso</label>
+                    <input type="number" step="0.01" name="weight" placeholder="nuovo peso" required />
+                </div>
+                <div class="col-md-2">
+                    <input style="margin-top: 1.73em" class="btn btn-primary" type="submit" value="Aggiungi" />
+                </div>
             </div>
-            <div class="col-md-2">
-                <input style="margin-top: 1.73em" class="btn btn-primary" type="submit" value="Aggiungi" />
-            </div>
-        </div>
-    </form>
-</fieldset>
+        </form>
+    </fieldset>
 }
 
-<div id="pesi"> </div> <br />
 <script>
     function createChart() {
         $("#pesi").kendoChart({
