--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksMedic.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksMedic.cshtml
@@ -4,6 +4,7 @@
 
 @model KCASM_AppWeb.Models.ForView.Tasks
 
+<h2>Elenco di tutti i task</h2>
 <div style="margin-top: 2em" id="tasks"></div>
 <script>
                 $(document).ready(function () {
