--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
@@ -80,8 +80,16 @@
             text-align: center;
             color: white;
         }
-        legend {color:black;border-bottom-color: black; text-align: center}
-        h1, h2 {text-align:center}
+
+        legend {
+            color: black;
+            border-bottom-color: black;
+            text-align: center
+        }
+
+        h1, h2 {
+            text-align:center
+        }
     </style>
     
 </body>
