--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksPatient.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Tasks/TasksPatient.cshtml
@@ -4,8 +4,8 @@
 
 @model KCASM_AppWeb.Models.ForView.Tasks
 
+<h2>Elenco di tutti i task</h2>
 <div style="margin-top: 2em" id="tasks"></div>
-
 <script>
                 $(document).ready(function () {
                     $("#tasks").kendoGrid({
@@ -26,7 +26,7 @@
                                 }
                             },
                             pageSize: 10
-                        },
+                        },                      
                         height: "50em",
                         groupable: false,
                         sortable: true,
