--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
@@ -53,16 +53,11 @@
         body, html {
             background-repeat: no-repeat;
             background-color: rgb(216, 255, 211);
+            margin-bottom: 0px;
+            padding-bottom: 0px;
         }
 
-        html {
-            position: relative;
-            min-height: 100%;
-        }
-
-        body {
-            margin-bottom: 60px;
-        }
+        
 
         .error-message {
             color: rgb(42, 42, 42);
@@ -72,11 +67,11 @@
             background-color: rgb(34,34,34);
             color: white;
             position: absolute;
-            bottom: 0;
+            margin-bottom: 0px;
+            margin-top: 2em;
             width: 100%;
-            /* Set the fixed height of the footer here */
             height: 60px;
-            line-height: 60px; /* Vertically center the text there */
+            line-height: 60px;
             text-align: center;
             color: white;
         }
