--- a/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
+++ b/KCASM_AppWeb/KCASM_AppWeb/Views/Shared/_Layout.cshtml
@@ -55,9 +55,12 @@
             background-color: rgb(216, 255, 211);
             margin-bottom: 0px;
             padding-bottom: 0px;
+          
         }
 
-        
+        body {
+            height: 100%;
+        }
 
         .error-message {
             color: rgb(42, 42, 42);
@@ -65,13 +68,12 @@
 
         .footer {
             background-color: rgb(34,34,34);
-            color: white;
+            color: white;      
             position: absolute;
             margin-bottom: 0px;
             margin-top: 2em;
             width: 100%;
-            height: 60px;
-            line-height: 60px;
+            line-height: 100px;
             text-align: center;
             color: white;
         }
